<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_margin="10dp"
        android:stretchColumns="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/label_alpha"
                android:gravity="right"
                    />
            <SeekBar
                android:id="@+id/alphaSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:padding="14dp"

                />
        </TableRow>

        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/label_red"
                android:gravity="right"
                />
            <SeekBar
                android:id="@+id/redSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:padding="14dp"

                />
        </TableRow>

        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/label_green"
                android:gravity="right"
                />
            <SeekBar
                android:id="@+id/greenSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:padding="14dp"

                />
        </TableRow>

        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/label_blue"
                android:gravity="right"
                />
            <SeekBar
                android:id="@+id/blueaSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:padding="14dp"

                />
        </TableRow>

    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_margin="10dp">
        <View
            android:id="@+id/colorView"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
        />

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setColorButton"
        android:text="@string/set_color"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>